# xprintidle-ng

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  COPYING.md  INSTALL.md  Makefile.am  NEWS.md  README.md  bootstrap  bootstrap.conf  configure.ac  index.html  params.json  xprintidle.c
doc/: xprintidle-ng.texi  xprintidle.texi  xprintidle.x
man/: xprintidle-ng.x
po/: POTFILES.in
src/: system.h  time-format.c  time-format.h  xprintidle-ng.c  xprintidle.c
